--- a/CSS/index.css
+++ b/CSS/index.css
@@ -15,6 +15,24 @@
     margin: 0;
 }
 
+.nav-links{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.nav-links a{
+    text-decoration: none;
+    padding: 1em;
+    font-size: 20px;
+    font-family: 'IM Fell English', serif;
+    color: black;
+}
+
+.nav-links a:hover{
+    color: #f5f5f5;
+}   
+
 .image {
     top: 0;
     left: 0;
