update logo font

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Borel&family=IM+Fell+English&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap');
 
 
 .navbar{
@@ -9,8 +10,9 @@
 }
 
 .logo {
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Nonum Gothic Coding', monospace;
     font-size: 55px;
+    font-weight: 200;
     color: black;
     margin: 0;
 }
@@ -50,6 +52,7 @@
 .pitch{
     font-family: 'IM Fell English', serif;
     font-size: 55px;
+    padding: 0.5em;
 }
 
 .content {
